--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <section class="card">
       <h2>DGPA + %</h2>
       <select id="courseType" onchange="updateYGPAFields()">
-        <option value="1">1-Year Degree</option>
-        <option value="2">2-Year Degree</option>
-        <option value="3">3-Year Normal</option>
-        <option value="3l">3-Year Lateral</option>
-        <option value="4">4-Year (BTech)</option>
+        <option value="1">1-Year Course</option>
+        <option value="2">2-Year Course</option>
+        <option value="3">3-Year Course</option>
+        <option value="3l">3-Year Course Lateral</option>
+        <option value="4">4-Year Course</option>
       </select>
       <div class="ygpa-field"><input type="number" id="yg1" placeholder="Enter YGPA 1" /></div>
       <div class="ygpa-field"><input type="number" id="yg2" placeholder="Enter YGPA 2" /></div>
@@ -76,7 +76,7 @@
     <button id="backBtn" onclick="hideCalculations()">⬅ Back</button>
     <div class="calcContent">
       <h1>MAKAUT Calculation Rules</h1>
-      <img src="makaut_calculations.jpg" alt="Calculation Screenshot">
+      <img src="./assets/calculation.png" alt="Calculation Screenshot">
     </div>
   </div>
 
