--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ========== Header ========== -->
   <header class="site-header">
     <div class="logo-wrapper">
-      <img src="./assets/logo.png" alt="ULVOXO UPDATE Logo" class="site-logo" />
+      <img src="./assets/ulvoxo-updates-logo.png" alt="ULVOXO UPDATE Logo" class="site-logo" />
     </div>
   </header>
 
@@ -75,7 +75,7 @@
   <div id="calcScreen">
     <button id="backBtn" onclick="hideCalculations()">⬅ Back</button>
     <div class="calcContent">
-      <h1>MAKAUT Calculation Rules</h1>
+      <h1>Makaut Calculation Rules</h1>
       <img src="./assets/calculation.png" alt="Calculation Screenshot">
     </div>
   </div>
