updated new keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MAKAUT GPA Calculator</title>
+  <!-- ✅ Primary Meta Tags -->
+  <meta name="title" content="MAKAUT GPA & Percentage Calculator | Openroot">
+  <meta name="description" content="Calculate SGPA, YGPA, DGPA, CGPA, and their corresponding percentages quickly with Openroot's MAKAUT GPA Calculator. Perfect for students.">
+  <meta name="keywords" content="MAKAUT GPA calculator, MAKAUT percentage calculator, SGPA calculator, YGPA calculator, DGPA calculator, CGPA calculator, university grade calculator, Openroot, student tools, GPA to percentage converter">
+  <meta name="author" content="Openroot">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://ulvoxo.com/makaut-grade-calculator/">
+
+  <!-- ✅ Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="MAKAUT GPA & Percentage Calculator | Openroot">
+  <meta property="og:description" content="Quickly calculate SGPA, YGPA, DGPA, CGPA and percentages with Openroot's free MAKAUT GPA calculator.">
+  <meta property="og:image" content="https://ulvoxo.com/makaut-grade-calculator/assets/openroot-withoutbg.png">
+  <meta property="og:url" content="https://ulvoxo.com/makaut-grade-calculator/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Openroot">
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MAKAUT GPA & Percentage Calculator | Openroot">
+  <meta name="twitter:description" content="Easily calculate SGPA, YGPA, DGPA, CGPA and percentages with this free MAKAUT GPA Calculator for students.">
+  <meta name="twitter:image" content="https://ulvoxo.com/makaut-grade-calculator/assets/openroot-withoutbg.png">
+  
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
